--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
@@ -18,61 +18,11 @@
       <a href="Tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <section>
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <input type="button" value="Zamów Usługę" />
-      </section>
-      <section>
-        <ul>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Czym się zajmujemy</h2>
-        <ul>
-          <li>
-            <img src="images/box1.jpg" alt="Coding" width="370" height="294" />
-          </li>
-          <li>
-            <img src="images/box2.jpg" alt="Apps" width="370" height="294" />
-          </li>
-          <li>
-            <img
-              src="images/box3.jpg"
-              alt="Graphics"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
+      <input type="button" value="Wszystkie" />
+      <input type="button" value="Strony" />
+      <input type="button" value="Aplikacje" />
+      <input type="button" value="Dizajn" />
+      <input type="button" value="Marketing" />
       <section>
         <h2>Nasz zespół</h2>
         <ul>
