--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+      <link rel="stylesheet" href="./css/style.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet"
+      />
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -24,46 +32,59 @@
       <input type="button" value="Dizajn" />
       <input type="button" value="Marketing" />
       <section>
-        <h2>Nasz zespół</h2>
         <ul>
           <li>
             <figure>
               <img
-                src="images/productdesigner.jpg"
-                alt="Product Designer"
-                width="270"
-                height="260"
+                src="images/technocrack.jpg"
+                alt="Technocrack"
+                width="370"
+                height="294"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>Product Designer</a>
+                <h4>Technocrack</h4>
+                <a>Strona internetowa</a>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/frontenddeveloper.jpg"
-                alt="Frontend Developer"
-                width="270"
-                height="260"
+                src="images/neworleanvsgoldenstar.jpg"
+                alt="Grafika New Orlean vs Golden Star"
+                width="370"
+                height="294"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>Frontend Developer</a>
+                <h4>Grafika New Orlean vs Golden Star</h4>
+                <a>Dizajn</a>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/marketing.jpg"
-                alt="marketing"
-                width="270"
-                height="260"
+                src="images/restauracjaseafood.jpg"
+                alt="Logo Restauracja Seafood"
+                width="370"
+                height="294"
               />
               <figcaption>
-                <h4>John Doe</h4>
+                <h4>Restauracja Seafood</h4>
+                <a>Aplikacja</a>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/projektprime.jpg"
+                alt="Headphones"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h4>Projekt Prime</h4>
                 <a>Marketing</a>
               </figcaption>
             </figure>
@@ -71,14 +92,70 @@
           <li>
             <figure>
               <img
-                src="images/uidesigner.jpg"
-                alt="UI designer"
-                width="270"
-                height="260"
+                src="images/projektboxes.jpg"
+                alt="Boxes"
+                width="370"
+                height="294"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>UI designer</a>
+                <h4>Projekt Boxes</h4>
+                <a>Aplikacja</a>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/inspirationhasnoborders.jpg"
+                alt="Website"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h4>Inspiration has no Borders</h4>
+                <a>Strona internetowa</a>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/magazynlimitededition.jpg"
+                alt="Magazine page"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h4>Magazyn Limited Edition</h4>
+                <a>Dizajn</a>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/projektlab.jpg"
+                alt="Projekt LAB"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h4>Projekt LAB</h4>
+                <a>Marketing</a>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/growingbusiness.jpg"
+                alt="Website Apps of Growing Business"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h4>Growing Business</h4>
+                <a>Aplikacja</a>
               </figcaption>
             </figure>
           </li>
