--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
   </head>
-  <body>
+  <body class="body-font">
     <header>
+      <a class="logo-studio" href="index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio">Studio</span></a
+      >
       <nav>
-        <a href="index.html">WebStudio</a>
-        <a href="#">Agencja</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="#">Kontakt</a>
+        <a class="header-text" href="#">Agencja</a>
+        <a class="header-text" href="Portfolio.html">Portfolio</a>
+        <a class="header-text" href="#">Kontakt</a>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="Tel:+48111111111">+48 111 111 111</a>
+      <a class="header-text" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="header-text" href="Tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
       <section>
