--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <head>
-      <link rel="stylesheet" href="./css/style.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet"
-      />
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
-  <body>
+  <body class="body-font">
     <header>
+      <a class="logo-studio" href="index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio">Studio</span></a
+      >
       <nav>
-        <a href="index.html">WebStudio</a>
-        <a href="#">Agencja</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="#">Kontakt</a>
+        <a class="header-text" href="#">Agencja</a>
+        <a class="header-text" href="Portfolio.html">Portfolio</a>
+        <a class="header-text" href="#">Kontakt</a>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="Tel:+48111111111">+48 111 111 111</a>
+      <a class="contact-text" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <input type="button" value="Wszystkie" />
-      <input type="button" value="Strony" />
-      <input type="button" value="Aplikacje" />
-      <input type="button" value="Dizajn" />
-      <input type="button" value="Marketing" />
+      <input
+        class="buttons-portfolio buttons-portfolio-text"
+        type="button"
+        value="Wszystkie"
+      />
+      <input
+        class="buttons-portfolio buttons-portfolio-text"
+        type="button"
+        value="Strony"
+      />
+      <input
+        class="buttons-portfolio buttons-portfolio-text"
+        type="button"
+        value="Aplikacje"
+      />
+      <input
+        class="buttons-portfolio buttons-portfolio-text"
+        type="button"
+        value="Dizajn"
+      />
+      <input
+        class="buttons-portfolio buttons-portfolio-text"
+        type="button"
+        value="Marketing"
+      />
       <section>
         <ul>
           <li>
@@ -42,8 +66,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Technocrack</h4>
-                <a>Strona internetowa</a>
+                <h4 class="portfolio-icon-title">Technocrack</h4>
+                <a class="property-name">Strona internetowa</a>
               </figcaption>
             </figure>
           </li>
@@ -56,8 +80,10 @@
                 height="294"
               />
               <figcaption>
-                <h4>Grafika New Orlean vs Golden Star</h4>
-                <a>Dizajn</a>
+                <h4 class="portfolio-icon-title">
+                  Grafika New Orlean vs Golden Star
+                </h4>
+                <a class="property-name">Dizajn</a>
               </figcaption>
             </figure>
           </li>
@@ -70,8 +96,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Restauracja Seafood</h4>
-                <a>Aplikacja</a>
+                <h4 class="portfolio-icon-title">Restauracja Seafood</h4>
+                <a class="property-name">Aplikacja</a>
               </figcaption>
             </figure>
           </li>
@@ -84,8 +110,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Projekt Prime</h4>
-                <a>Marketing</a>
+                <h4 class="portfolio-icon-title">Projekt Prime</h4>
+                <a class="property-name">Marketing</a>
               </figcaption>
             </figure>
           </li>
@@ -98,8 +124,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Projekt Boxes</h4>
-                <a>Aplikacja</a>
+                <h4 class="portfolio-icon-title">Projekt Boxes</h4>
+                <a class="property-name">Aplikacja</a>
               </figcaption>
             </figure>
           </li>
@@ -112,8 +138,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Inspiration has no Borders</h4>
-                <a>Strona internetowa</a>
+                <h4 class="portfolio-icon-title">Inspiration has no Borders</h4>
+                <a class="property-name">Strona internetowa</a>
               </figcaption>
             </figure>
           </li>
@@ -126,8 +152,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Magazyn Limited Edition</h4>
-                <a>Dizajn</a>
+                <h4 class="portfolio-icon-title">Magazyn Limited Edition</h4>
+                <a class="property-name">Dizajn</a>
               </figcaption>
             </figure>
           </li>
@@ -140,8 +166,8 @@
                 height="294"
               />
               <figcaption>
-                <h4>Projekt LAB</h4>
-                <a>Marketing</a>
+                <h4 class="portfolio-icon-title">Projekt LAB</h4>
+                <a class="property-name">Marketing</a>
               </figcaption>
             </figure>
           </li>
@@ -154,19 +180,26 @@
                 height="294"
               />
               <figcaption>
-                <h4>Growing Business</h4>
-                <a>Aplikacja</a>
+                <h4 class="portfolio-icon-title">Growing Business</h4>
+                <a class="property-name">Aplikacja</a>
               </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="Tel:+48111111111">+48 111 111 111</a>
+    <footer class="footer-box">
+      <a class="logo-studio" href="index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio-footer">Studio</span></a
+      >
+      <address class="address-text">
+        m. Warszawa, Aleje Jerozolimskie 21
+      </address>
+      <a class="contact-text" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </footer>
   </body>
 </html>
