--- a/index.html
+++ b/index.html
@@ -24,42 +24,46 @@
         <a class="header-text" href="Portfolio.html">Portfolio</a>
         <a class="header-text" href="#">Kontakt</a>
       </nav>
-      <a class="header-text" href="mailto:info@devstudio.com"
+      <a class="contact-text" href="mailto:info@devstudio.com"
         >info@devstudio.com</a
       >
-      <a class="header-text" href="Tel:+48111111111">+48 111 111 111</a>
+      <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <section>
+      <section class="h1-box">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <input type="button" value="Zamów Usługę" />
+        <input
+          class="buttons button-h1-text"
+          type="button"
+          value="Zamów Usługę"
+        />
       </section>
       <section>
         <ul>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="lorem-ipsum-header">LOREM IPSUM</h3>
+            <p class="lorem-ipsum-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="lorem-ipsum-header">LOREM IPSUM</h3>
+            <p class="lorem-ipsum-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="lorem-ipsum-header">LOREM IPSUM</h3>
+            <p class="lorem-ipsum-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
-            <p>
+            <h3 class="lorem-ipsum-header">LOREM IPSUM</h3>
+            <p class="lorem-ipsum-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
@@ -97,8 +101,8 @@
                 height="260"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>Product Designer</a>
+                <h4 class="specialist-name">John Doe</h4>
+                <a class="specialization-name">Product Designer</a>
               </figcaption>
             </figure>
           </li>
@@ -111,8 +115,8 @@
                 height="260"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>Frontend Developer</a>
+                <h4 class="specialist-name">John Doe</h4>
+                <a class="specialization-name">Frontend Developer</a>
               </figcaption>
             </figure>
           </li>
@@ -125,8 +129,8 @@
                 height="260"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>Marketing</a>
+                <h4 class="specialist-name">John Doe</h4>
+                <a class="specialization-name">Marketing</a>
               </figcaption>
             </figure>
           </li>
@@ -139,19 +143,26 @@
                 height="260"
               />
               <figcaption>
-                <h4>John Doe</h4>
-                <a>UI designer</a>
+                <h4 class="specialist-name">John Doe</h4>
+                <a class="specialization-name">UI designer</a>
               </figcaption>
             </figure>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="Tel:+48111111111">+48 111 111 111</a>
+    <footer class="footer-box">
+      <a class="logo-studio" href="index.html"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio-footer">Studio</span></a
+      >
+      <address class="address-text">
+        m. Warszawa, Aleje Jerozolimskie 21
+      </address>
+      <a class="contact-text" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </footer>
   </body>
 </html>
