--- a/Portfolio.html
+++ b/Portfolio.html
@@ -29,34 +29,27 @@
       >
       <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </header>
+    <hr />
     <main>
-      <input
-        class="buttons-portfolio buttons-portfolio-text"
-        type="button"
-        value="Wszystkie"
-      />
-      <input
-        class="buttons-portfolio buttons-portfolio-text"
-        type="button"
-        value="Strony"
-      />
-      <input
-        class="buttons-portfolio buttons-portfolio-text"
-        type="button"
-        value="Aplikacje"
-      />
-      <input
-        class="buttons-portfolio buttons-portfolio-text"
-        type="button"
-        value="Dizajn"
-      />
-      <input
-        class="buttons-portfolio buttons-portfolio-text"
-        type="button"
-        value="Marketing"
-      />
       <section>
-        <ul>
+        <div>
+          <button class="buttons-portfolio buttons-portfolio-text">
+            Wszystkie
+          </button>
+          <button class="buttons-portfolio buttons-portfolio-text">
+            Strony
+          </button>
+          <button class="buttons-portfolio buttons-portfolio-text">
+            Aplikacje
+          </button>
+          <button class="buttons-portfolio buttons-portfolio-text">
+            Dizajn
+          </button>
+          <button class="buttons-portfolio buttons-portfolio-text">
+            Marketing
+          </button>
+        </div>
+        <ul class="list-style">
           <li>
             <figure>
               <img
