--- a/index.html
+++ b/index.html
@@ -29,17 +29,14 @@
       >
       <a class="contact-text" href="Tel:+48111111111">+48 111 111 111</a>
     </header>
+    <hr />
     <main>
       <section class="h1-box">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <input
-          class="buttons button-h1-text"
-          type="button"
-          value="Zamów Usługę"
-        />
+        <button class="buttons button-h1-text">Zamów Usługę</button>
       </section>
       <section>
-        <ul>
+        <ul class="list-style">
           <li>
             <h3 class="lorem-ipsum-header">LOREM IPSUM</h3>
             <p class="lorem-ipsum-text">
@@ -72,7 +69,7 @@
       </section>
       <section>
         <h2>Czym się zajmujemy</h2>
-        <ul>
+        <ul class="list-style">
           <li>
             <img src="images/box1.jpg" alt="Coding" width="370" height="294" />
           </li>
@@ -91,7 +88,7 @@
       </section>
       <section>
         <h2>Nasz zespół</h2>
-        <ul>
+        <ul class="list-style">
           <li>
             <figure>
               <img
